--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,15 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 </head>
 <body>
+
+  <!-- Image and text -->
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+      <img src="http://www.free-icons-download.net/images/french-fries-icon-39751.png" width="30" height="30" class="d-inline-block align-top" alt="">
+      Lets Fry This
+    </a>
+  </nav>
+
   <app-root></app-root>
 </body>
 </html>
