Home page and Navbar updates

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,9 @@
 <body>
 
   <!-- Image and text -->
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-dark navbar-fixed-top text-warning">
     <a class="navbar-brand" href="#">
+    
       <img src="http://www.free-icons-download.net/images/french-fries-icon-39751.png" width="30" height="30" class="d-inline-block align-top" alt="">
       Lets Fry This app
     </a>
