--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>AppName</title>
   <base href="/">
 
+  <link href="https://fonts.googleapis.com/css?family=Francois+One|Oswald:300" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
@@ -13,7 +14,7 @@
 
   <!-- Image and text -->
 <nav class="navbar navbar-dark navbar-fixed-top text-warning">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand oswald" href="#">
     
       <img src="http://www.free-icons-download.net/images/french-fries-icon-39751.png" width="30" height="30" class="d-inline-block align-top" alt="">
       Lets Fry This app
