Starting Result page; Updated Navbar

--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,16 @@
 
   <!-- Image and text -->
 <nav class="navbar navbar-dark navbar-fixed-top text-warning">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand bold" href="#">
     
-      <img src="http://www.free-icons-download.net/images/french-fries-icon-39751.png" width="30" height="30" class="d-inline-block align-top" alt="">
-      Lets Fry This app
+      <img src="https://thumbs.gfycat.com/GeneralPeriodicChinchilla-max-1mb.gif" width="40" height="65" class="d-inline-block align-top" alt="">
+        Lets Fry This app
     </a>
   </nav>
 
   <app-root></app-root>
 </body>
 </html>
+
+
+<!-- http://www.free-icons-download.net/images/french-fries-icon-39751.png -->
