Result template and Icon change

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
 <nav class="navbar navbar-dark navbar-fixed-top text-warning">
     <a class="navbar-brand oswald" href="#">
     
-      <img src="https://thumbs.gfycat.com/GeneralPeriodicChinchilla-max-1mb.gif" width="40" height="65" class="d-inline-block align-top" alt="">
-        Lets Fry This app
+      <img src="http://www.animated-gifs.eu/category_kitchen/kitchen-fast-food/0038.gif" width="50" height="50" class="d-inline-block align-top" alt="">
+      Lets Fry This app
     </a>
   </nav>
 
