Question logic, results.

--- a/src/index.html
+++ b/src/index.html
@@ -2,26 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AppName</title>
+  <title>Types of Fries</title>
   <base href="/">
 
   <link href="https://fonts.googleapis.com/css?family=Francois+One|Oswald:300" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon"  href="http://www.free-icons-download.net/images/french-fries-icon-39751.png">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-</head>
-<body>
-
-  <!-- Image and text -->
-<nav class="navbar navbar-dark navbar-fixed-top text-warning">
+  <nav class="navbar navbar-dark fixed-top">
     <a class="navbar-brand oswald" href="#">
     
       <img src="http://www.animated-gifs.eu/category_kitchen/kitchen-fast-food/0038.gif" width="50" height="50" class="d-inline-block align-top" alt="">
       Lets Fry This app
     </a>
   </nav>
+</head>
+<body>
 
+<div class=" mt-5">
   <app-root></app-root>
+</div>
+
+
 </body>
 </html>
 
